--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <h1>My List</h1>
-    <input type="text" id="itemInput" placeholder="Enter item">
+    <input type="text" id="itemInput" placeholder="Enter Book Title">
     <button id="addButton">Add</button>
   
     <ul id="itemList"></ul>
