users can now rate each book before adding it to their list

--- a/index.html
+++ b/index.html
@@ -10,6 +10,13 @@
 <body>
     <h1>My List</h1>
     <input type="text" id="itemInput" placeholder="Enter Book Title">
+    <select id="ratingInput">
+      <option value="1">⭐</option>
+      <option value="2">⭐⭐</option>
+      <option value="3">⭐⭐⭐</option>
+      <option value="4">⭐⭐⭐⭐</option>
+      <option value="5">⭐⭐⭐⭐⭐</option>
+    </select>
     <button id="addButton">Add</button>
   
     <ul id="itemList"></ul>
